Bug 1623325 - Fix nsTArrayBackInserter and add moving test. r=froydnj a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D67337